--- a/index.html
+++ b/index.html
@@ -8,27 +8,28 @@
       href="https://cdn.jsdelivr.net/npm/remixicon@4.9.0/fonts/remixicon.css"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://unpkg.com/sheryjs/dist/Shery.css" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div id="main">
       <div id="home">
         <div id="nav">
-          <div id="logo">
+          <div id="logo" class="magnet">
             <img src="images/cuberto-logo-vector.svg" alt="" />
           </div>
           <div id="right">
-            <a href="#">our showreel</a>
-            <a href="#">menu</a>
-            <i class="ri-menu-line"></i>
+            <a href="#" class="magnet">our showreel</a>
+            <a href="#" class="magnet">menu</a>
+            <i class="ri-menu-line magnet"></i>
           </div>
         </div>
         <div id="homemain">
           <h4>We make it happen</h4>
           <div class="headings">
-            <h1>Websites</h1>
-            <h1>Apps</h1>
-            <h1>Branding</h1>
+            <h1 class="vids">Websites</h1>
+            <h1 class="vids">Apps</h1>
+            <h1 class="vids">Branding</h1>
           </div>
         </div>
         <div id="homelast">
@@ -61,18 +62,23 @@
               <h1>Official website of riyadh, saudi arabia's capital</h1>
               <h5>design, development, product</h5>
             </div>
-            <div class="fleftelem">
+            <div class="fleftelem last">
               <h3>Riyadh</h3>
               <h1>Official website of riyadh, saudi arabia's capital</h1>
               <h5>design, development, product</h5>
             </div>
           </div>
           <div id="fright">
-            <div class="images"></div>
+            <div class="images">
+              <img src="./images/1.jpg" alt="" />
+              <img src="./images/2.jpg" alt="" />
+              <img src="./images/3.jpg" alt="" />
+              <img src="./images/4.jpg" alt="" />
+            </div>
           </div>
         </div>
         <div class="btn">
-          <button>view all product</button>
+          <button class="magnet">view all product</button>
         </div>
       </div>
       <div id="dev">
@@ -116,8 +122,22 @@
         </div>
       </div>
       <div class="btn">
-        <button>view all product</button>
+        <button class="magnet">view all product</button>
       </div>
     </div>
+    <footer>
+      <div id="yoyo">
+        <h1 class="magnet">Hola</h1>
+      </div>
+    </footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/0.155.0/three.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/automat/controlkit.js@master/bin/controlKit.min.js"></script>
+    <script
+      type="text/javascript"
+      src="https://unpkg.com/sheryjs/dist/Shery.js"
+    ></script>
+    <script src="script.js"></script>
   </body>
 </html>
